@@ -3,6 +3,7 @@
 
 Version 1.1.0 introduces one major breaking API change. The Table, Table.from_csv and TableSet.from_csv methods now all takes "column_names" and "column_types" as separate arguments instead of as a list of tuples. Was done to facilitate type inference and to streamline the API in various other places.
 
+* Date and DateTime type testing now takes specified format into account. (#361)
 * Number column now takes a float_precision argument.
 * Number columns can now be populated with float values. (#370)
 * TypeTester can now validate Python native types (not just strings). (#367)
